--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,14 @@
   font-family: "bold";
   font-size: 60px;
   text-align: center;
+}
+
+img {
+  width: 250px;
+  height: 250px;
+}
+
+img:hover {
+  zoom: 1.2;
+  transition: 1.5s ease-in-out;
 }/*# sourceMappingURL=style.css.map */
