--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,5 +1,41 @@
+.inputForm{
+    form{
+        background-color: $secondaryColorLight;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 1000px;
+        height: 500px;
+        border-radius: 20px;
+        textarea{
+            height: 100px;
+            width: 90%;
+            border-radius: 20px;
+            padding: 10px 10px;
+            resize: none;
+            margin: 10px 0px;
+        }
+        textarea:focus{
+            outline: none !important;
+            border: 3px solid $accentColor;
+      
+        }
+        #snippetImage{
+            color: $primaryColor;
+            cursor: pointer;
+        }
+    }
+}
+
+
 img{
     width: 250px;
     height: 250px;
     padding: 10px 10px;
+    transition: 1.5s;
+}
+
+img:hover{
+    zoom: 1.2;
 }
