--- a/styles/style.css
+++ b/styles/style.css
@@ -8,24 +8,62 @@
   font-style: normal;
   src: url(../fonts/Poppins/Poppins-Bold.ttf);
 }
+body {
+  background-color: #131417;
+}
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Poppins";
 }
 
 .bigHeader {
   font-family: "bold";
   font-size: 60px;
   text-align: center;
+  color: #fafafa;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.inputForm form {
+  background-color: #1E1F26;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1000px;
+  height: 500px;
+  border-radius: 20px;
+}
+.inputForm form textarea {
+  height: 100px;
+  width: 90%;
+  border-radius: 20px;
+  padding: 10px 10px;
+  resize: none;
+  margin: 10px 0px;
+}
+.inputForm form textarea:focus {
+  outline: none !important;
+  border: 3px solid #2cddce;
+}
+.inputForm form #snippetImage {
+  color: #fafafa;
+  cursor: pointer;
 }
 
 img {
   width: 250px;
   height: 250px;
   padding: 10px 10px;
+  transition: 1.5s;
 }
 
 img:hover {
   zoom: 1.2;
-  transition: 1.5s ease-in-out;
 }/*# sourceMappingURL=style.css.map */
