--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,15 @@ body {
   justify-content: center;
 }
 
+button {
+  width: 250px;
+  height: 100px;
+  background-color: transparent;
+  border: 2px solid #fafafa;
+  font-size: 45px;
+  color: #fafafa;
+}
+
 .inputForm form {
   background-color: #1E1F26;
   display: flex;
@@ -39,6 +48,9 @@ body {
   width: 1000px;
   height: 500px;
   border-radius: 20px;
+}
+.inputForm form h2 {
+  color: #fafafa;
 }
 .inputForm form textarea {
   height: 100px;
@@ -58,7 +70,7 @@ body {
 }
 
 img {
-  width: 250px;
+  width: auto;
   height: 250px;
   padding: 10px 10px;
   transition: 1.5s;
@@ -66,4 +78,36 @@ img {
 
 img:hover {
   zoom: 1.2;
+}
+
+.codeSection {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.codeSection .section {
+  width: 1500px;
+  height: 550px;
+  background-color: #1E1F26;
+  margin: 10px 10px;
+  border: 2px solid #fafafa;
+  border-radius: 10px;
+  color: #FAFAFA;
+}
+.codeSection .section textarea {
+  width: 100%;
+  height: 94%;
+  background-color: #1E1F26;
+  resize: none;
+  color: #fafafa;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+}
+.codeSection .section h3 {
+  text-align: center;
+  font-weight: 100;
+}
+.codeSection .small {
+  width: 740px;
 }/*# sourceMappingURL=style.css.map */
