--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,6 +38,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: "Poppins";
+
   }
   
 
@@ -53,11 +54,19 @@ body{
   justify-content: center;
 }
 
-
+button{
+  width: 250px;
+  height:100px;
+  background-color: transparent;
+  border: 2px solid $primaryColor;
+  font-size: 45px;
+  color: $primaryColor;
+}
 //-------------------------------MULTI PURPOSE CSS---------------------------------
 
 
 //-------------------------------IMPORTS---------------------------------
 
-@import "_index.scss"
+@import "_index.scss";
+@import "_details.scss";
 //-------------------------------IMPORTS---------------------------------
