--- a/styles/style.css
+++ b/styles/style.css
@@ -31,12 +31,13 @@ body {
 }
 
 button {
-  width: 250px;
-  height: 100px;
+  width: 150px;
+  height: 50px;
   background-color: transparent;
   border: 2px solid #fafafa;
-  font-size: 45px;
+  font-size: 25px;
   color: #fafafa;
+  margin: 10px 10px;
 }
 
 .inputForm form {
