--- a/styles/style.scss
+++ b/styles/style.scss
@@ -55,12 +55,13 @@ body{
 }
 
 button{
-  width: 250px;
-  height:100px;
+  width: 150px;
+  height:50px;
   background-color: transparent;
   border: 2px solid $primaryColor;
-  font-size: 45px;
+  font-size: 25px;
   color: $primaryColor;
+  margin: 10px 10px;
 }
 //-------------------------------MULTI PURPOSE CSS---------------------------------
 
