--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,6 @@
 //-------------------------------COLORS---------------------------------
 $primaryColor: #fafafa;
-$primaryDark:  #fafafa;
+$primaryDark:  #bdbdbd;
 $primaryLight: #FAFAFA;
 
 $secondaryColor: #131417;
