small error handling changes

--- a/styles/snippetStyle.scss
+++ b/styles/snippetStyle.scss
@@ -77,7 +77,7 @@ button:hover{
 
 //-------------------------------IMPORTS---------------------------------
 
-@import "_index.scss";
-@import "_details.scss";
-@import "_testStyle.scss";
+@import "_snippetIndex.scss";
+@import "_snippetDetails.scss";
+
 //-------------------------------IMPORTS---------------------------------
