--- a/styles/_snippetIndex.scss
+++ b/styles/_snippetIndex.scss
@@ -40,13 +40,25 @@
     justify-content: center;
     padding-top: 50px;
 }
-img{
-    width: auto;
-    height: 150px;
-    padding: 10px 10px;
-    transition: 1.5s;
-}
 
-img:hover{
-    zoom: 1.2;
+a{
+    width: 250px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1a1b1f;
+    margin: 10px 10px;
+    border: 1px solid #202125;
+}
+a:hover{
+    scale: 1.1;
+    border: 1px solid rgb(81, 81, 163);
+}
+img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    
 }
