--- a/styles/snippetStyle.css
+++ b/styles/snippetStyle.css
@@ -86,15 +86,28 @@ button:hover {
   padding-top: 50px;
 }
 
-img {
-  width: auto;
-  height: 150px;
-  padding: 10px 10px;
-  transition: 1.5s;
+a {
+  width: 250px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1a1b1f;
+  margin: 10px 10px;
+  border: 1px solid #202125;
 }
 
-img:hover {
-  zoom: 1.2;
+a:hover {
+  scale: 1.1;
+  border: 1px solid rgb(81, 81, 163);
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
 }
 
 .codeSection {
